fixes bug 146884 - Mozilla sometimes consumes 100% CPU when pipelining is enabled... r=dougt sr=rpotts a=asa